<resources>
    <string name="app_name">App</string>
    <string name="sig">Signal</string>
    <string name="conn">Connect</string>
    <string name="iplbl">IP Address</string>
    <string name="portlbl">Port </string>
    <string name="ampl">Amplitude</string>
    <string name="freq">Frequency</string>
    <string name="timef">Time</string>
    <string name="graph">Graph</string>
    <string name="retSett">Retrieve Settings</string>
    <string name="sendgraph">Send Graph</string>
    <string name="poslb">Position</string>
    <string name="posbtn">Set Position</string>
    <string-array name="signalshape">
        <item>Square</item>
        <item>Sine</item>
        <item>Triangle</item>

    </string-array>
    <string-array name="sigfreq">
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
    </string-array>
    <string-array name="sigampl">
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
    </string-array>
    <string-array name="sigtime">
        <item>0.20</item>
        <item>0.40</item>
        <item>0.60</item>
        <item>0.80</item>
        <item>1.00</item>
        <item>1.20</item>
        <item>1.40</item>
        <item>1.60</item>
        <item>1.80</item>
        <item>2.00</item>
    </string-array>
    <string-array name="pos">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
    </string-array>
</resources>
